--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
@@ -21,5 +21,11 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
+      <!-- <meta-data
+            android:name="vn.map4d.map.ACCESS_KEY"
+            android:value="df99a90453534be26dd169f18d2e9b5d"/> -->
+    <meta-data
+     android:name="com.google.android.geo.API_KEY"
+     android:value="AIzaSyCXHsPT450-AosY7dvzi5gUT_geYSpI34o"/>
     </application>
 </manifest>
