--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "clean:android": "cd android && ./gradlew clean && cd ../",
+    "build:android": "cd android && ./gradlew assembleRelease",
+    "clean:ios": "cd ios && xcodebuild clean && cd ../"
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^3.1.0",
     "@react-native-masked-view/masked-view": "^0.3.0",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/stack": "^6.3.18",
@@ -18,6 +22,7 @@
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-asset": "^2.1.1",
     "react-native-gesture-handler": "^2.13.1",
+    "react-native-maps": "^1.8.0",
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
