--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@react-native-community/geolocation": "^3.1.0",
     "@react-native-masked-view/masked-view": "^0.3.0",
+    "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/stack": "^6.3.18",
     "react": "18.2.0",
@@ -23,6 +24,7 @@
     "react-native-asset": "^2.1.1",
     "react-native-gesture-handler": "^2.13.1",
     "react-native-maps": "^1.8.0",
+    "react-native-paper": "^5.11.1",
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
