--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/stack": "^6.3.18",
+    "i18next": "^23.6.0",
     "react": "18.2.0",
+    "react-i18next": "^13.3.1",
     "react-native": "0.72.5",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-asset": "^2.1.1",
     "react-native-gesture-handler": "^2.13.1",
     "react-native-maps": "^1.8.0",
+    "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.11.1",
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.2",
