--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "clean:ios": "cd ios && xcodebuild clean && cd ../"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.5.1",
+    "@react-native-async-storage/async-storage": "^1.19.4",
     "@react-native-community/geolocation": "^3.1.0",
     "@react-native-masked-view/masked-view": "^0.3.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/stack": "^6.3.18",
     "i18next": "^23.6.0",
+    "mobx": "^6.10.2",
+    "mobx-react-lite": "^4.0.5",
     "react": "18.2.0",
     "react-i18next": "^13.3.1",
     "react-native": "0.72.5",
