--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
   "extends": "@tsconfig/react-native/tsconfig.json",
   "compilerOptions": {
     "baseUrl": ".",
+    "experimentalDecorators": true,
+    "useDefineForClassFields": true,
     "strict": true,
     "paths": {
       "@/*": ["./src/*"]
