--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/stack": "^6.3.18",
+    "axios": "^1.6.1",
     "i18next": "^23.6.0",
     "mobx": "^6.10.2",
     "mobx-react-lite": "^4.0.5",
