--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native": "0.72.5",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-asset": "^2.1.1",
+    "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "^2.13.1",
     "react-native-maps": "^1.8.0",
     "react-native-modal": "^13.0.1",
@@ -47,6 +48,7 @@
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
+    "@types/babel__core": "^7.20.4",
     "@types/react": "^18.0.24",
     "@types/react-native": "^0.72.5",
     "@types/react-native-vector-icons": "^6.4.16",
