--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-screens": "^3.25.0",
     "react-native-svg": "^13.14.0",
     "react-native-vector-icons": "^10.0.0",
+    "react-native-virtualized-view": "^1.0.0",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
