--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-asset": "^2.1.1",
     "react-native-geocoding": "^0.5.0",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.13.1",
     "react-native-maps": "^1.8.0",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.11.1",
     "react-native-reanimated": "^3.5.4",
