--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-community/geolocation": "^3.1.0",
     "@react-native-masked-view/masked-view": "^0.3.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/stack": "^6.3.18",
     "axios": "^1.6.1",
@@ -35,11 +36,12 @@
     "react-native-maps": "^1.8.0",
     "react-native-maps-directions": "^1.9.0",
     "react-native-modal": "^13.0.1",
-    "react-native-paper": "^5.11.1",
+    "react-native-pager-view": "^6.2.2",
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-svg": "^13.14.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.0",
     "react-native-virtualized-view": "^1.0.0",
     "yarn": "^1.22.19"
