--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGODB_URL =mongodb+srv://hthung:hthung123@cluster0.dxkoqob.mongodb.net/v-network-db?retryWrites=true&w=majority
+MONGODB_URL = mongodb+srv://hthung0101:hthung123@cluster0.94pn2fb.mongodb.net/?retryWrites=true&w=majority
 
 ACCESS_TOKEN_SECRET = youraccesstokensecret
 REFRESH_TOKEN_SECRET = yourrefreshtokensecret
