--- a/backend/package.json
+++ b/backend/package.json
@@ -2,13 +2,14 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js",
     "server": "nodemon server.js",
-    "client": "cd frontend && npm run start",
+    "client": "cd ../frontend && npm run start",
     "server-install": "npm install",
-    "client-install": "cd frontend && npm install",
+    "client-install": "cd ../frontend && npm install",
     "install-all": "concurrently \"npm run server-install\" \"npm run client-install\" ",
     "dev": "concurrently \"npm run server\" \"npm run client\" "
   },
@@ -23,7 +24,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.13",
+    "mongoose": "^5.13.21",
     "peer": "^0.6.1",
     "react-insta-stories": "^2.6.0",
     "socket.io": "^3.1.2",
