--- a/frontend/android/build.gradle
+++ b/frontend/android/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         targetSdkVersion = 33
         playServicesVersion = "18.0.0"
         playServicesLocationVersion = "21.0.1"
+        facebookSdkVersion = "13.1.0"
 
         // We use NDK 23 which has both M1 support and is the side-by-side NDK version from AGP.
         ndkVersion = "23.1.7779620"
