--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "react-native": "0.72.5",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-asset": "^2.1.1",
+    "react-native-fbsdk-next": "^12.1.1",
     "react-native-geocoding": "^0.5.0",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.13.1",
