--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,8 @@
     "react-native-geocoding": "^0.5.0",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.13.1",
+    "react-native-image-crop-picker": "^0.40.2",
+    "react-native-image-picker": "^7.0.3",
     "react-native-maps": "^1.8.0",
     "react-native-maps-directions": "^1.9.0",
     "react-native-modal": "^13.0.1",
