--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,11 +25,13 @@
     "i18next": "^23.6.0",
     "mobx": "^6.10.2",
     "mobx-react-lite": "^4.0.5",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-i18next": "^13.3.1",
     "react-native": "0.72.5",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-asset": "^2.1.1",
+    "react-native-calendars": "^1.1302.0",
     "react-native-fbsdk-next": "^12.1.1",
     "react-native-geocoding": "^0.5.0",
     "react-native-geolocation-service": "^5.3.1",
@@ -44,6 +46,7 @@
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-svg": "^13.14.0",
+    "react-native-swipe-list-view": "^3.2.9",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.0",
     "react-native-virtualized-view": "^1.0.0",
