--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,8 @@
     "react-native-maps-directions": "^1.9.0",
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^6.2.2",
+    "react-native-paper": "^5.11.7",
+    "react-native-radio-buttons-group": "^3.0.5",
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
