--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "react-native": "0.72.5",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-asset": "^2.1.1",
+    "react-native-calendar-picker": "^7.1.4",
     "react-native-calendars": "^1.1302.0",
     "react-native-fbsdk-next": "^12.1.1",
     "react-native-geocoding": "^0.5.0",
@@ -65,6 +66,7 @@
     "@types/babel__core": "^7.20.4",
     "@types/react": "^18.0.24",
     "@types/react-native": "^0.72.5",
+    "@types/react-native-calendar-picker": "^7.0.7",
     "@types/react-native-vector-icons": "^6.4.16",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
